feat(tests): migrate to JUnit5